# xal

./: Doxyfile  Info.plist  configure.ac  fileproperties.rc  libxal.project  libxal.sln  libxal.vcproj  libxal.vcxproj  libxal.vcxproj.filters  libxal.workspace  libxal_2008.sln  libxal_2010.sln  libxal_WinRT.sln  libxal_WinRT.vcxproj  libxal_WinRT.vcxproj.filters  libxal_vs2012-winrt.sln  libxal_vs2012.sln  libxal_vs2015-uwp.sln  libxal_vs2015.sln  xal.mkb  xal.project
android-studio/: README.txt
android-studio/demos/: build.gradle  settings.gradle
android-studio/demos-xal/: build.gradle  gradle.properties  settings.gradle
android-studio/demos/demo_simple/: CMakeLists.txt  build.gradle
android-studio/demos/demo_simple/src/main/: AndroidManifest.xml
android-studio/demos/demo_simple/src/main/java/com/xal/demoSimple/: Main.java
android-studio/demos/demo_test/: CMakeLists.txt  build.gradle
android-studio/demos/demo_test/src/main/: AndroidManifest.xml
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/src/main/: AndroidManifest.xml
audiosources/: FLAC_Source.cpp  FLAC_Source.h  M4A_Source.cpp  M4A_Source.h  MP3_Source.cpp  MP3_Source.h  OGG_Source.cpp  OGG_Source.h  SPX_Source.cpp  SPX_Source.h  WAV_Source.cpp  WAV_Source.h
audiosystems/AVFoundation/: AVFoundation_AudioManager.cpp  AVFoundation_AudioManager.h  AVFoundation_Player.h  AVFoundation_Player.mm
audiosystems/Android/: Android_AudioManager.cpp  Android_AudioManager.h  Android_Player.cpp  Android_Player.h
audiosystems/CoreAudio/: CoreAudio_AudioManager.cpp  CoreAudio_AudioManager.h  CoreAudio_Player.cpp  CoreAudio_Player.h
audiosystems/DirectSound/: DirectSound_AudioManager.cpp  DirectSound_AudioManager.h  DirectSound_MIDI_Source.cpp  DirectSound_Player.cpp  DirectSound_Player.h  DirectSound_WAV_Source.cpp  DirectSound_WAV_Source.h
audiosystems/NoAudio/: NoAudio_AudioManager.cpp  NoAudio_AudioManager.h  NoAudio_Player.cpp  NoAudio_Player.h
audiosystems/OpenAL/: OpenAL_AudioManager.cpp  OpenAL_AudioManager.h  OpenAL_Player.cpp  OpenAL_Player.h  OpenAL_iOS.mm
audiosystems/SDL/: SDL_AudioManager.cpp  SDL_AudioManager.h  SDL_Player.cpp  SDL_Player.h  SDL_Source.cpp  SDL_Source.h
audiosystems/XAudio2/: XAudio2_AudioManager.cpp  XAudio2_AudioManager.h  XAudio2_Player.cpp  XAudio2_Player.h
branches/1.2/: libxal.vcproj  libxal.vcxproj  libxal.vcxproj.filters
branches/1.3/: configure.ac  fileproperties.rc  libxal.project  libxal.vcproj  libxal.vcxproj  libxal.vcxproj.filters  libxal.workspace
branches/2.0/: Info.plist  Makefile.am  README.ios.rtf
branches/openal_buffer_queue_fix/: libxal.vcproj  libxal.vcxproj  libxal.vcxproj.filters  xal.mkb
branches/refactor_v2_0/: libxal.project  libxal.vcproj  libxal.vcxproj  libxal.vcxproj.filters  libxal_2008.sln
branches/stream_debug/: README.ios.rtf
decoders/: OGG_Decoder.cpp  OGG_Decoder.h  OGG_Source.cpp
demos/demo_simple/: Package-uwp.appxmanifest  Package-winp8.appxmanifest  Package.appxmanifest  demo_simple.cpp  demo_simple.project  demo_simple.vcproj  demo_simple.vcxproj  demo_simple_WinRT.vcxproj
demos/demo_test/: Package-uwp.appxmanifest  Package.appxmanifest  demo_test.cpp  demo_test.vcproj  demo_test.vcxproj  demo_test.vcxproj.filters  demo_test_WinRT.vcxproj
demos/media/: wb_male.spx
docs/html/: _audio_manager_8h.html  _audio_manager_8h_source.html  _buffer_8h.html  _buffer_8h_source.html  _category_8h.html  _category_8h_source.html  _player_8h.html  _player_8h_source.html  _sound_8h.html  _sound_8h_source.html  _source_8h.html  _source_8h_source.html  annotated.html  class_audio_system_type.html  class_buffer_mode.html  class_format.html  class_source_mode.html  classes.html  (+58 more)
libxal-ios.xcodeproj/: project.pbxproj
libxal.xcodeproj/: project.pbxproj
props/: v110-winrt.configuration.props  v110.configuration.props  v110.default.props
src/: AudioManager.cpp  Buffer.cpp  Buffer.h  BufferAsync.cpp  BufferAsync.h  Category.cpp  Endianess.h  ExternalComponent.cpp  Makefile.in  Mutex.cpp  OggSound.cpp  Player.cpp  SimpleSound.cpp  Sound.cpp  Sound2.cpp  SoundBuffer.cpp  SoundManager.cpp  Source.cpp  Source.h  SourceApple.mm  StreamSound.cpp  Thread.cpp  Util.cpp  Util.h  Utility.h  xal.cpp
tags/1.3/src/: Makefile.am  StreamSound.cpp
trunk/: Info.plist  Makefile.am  Makefile.in  README.mac.rtf  configure  configure.ac  fileproperties.rc  libxal.project  libxal.sln  libxal.vcproj  libxal.vcxproj  libxal.vcxproj.filters  libxal.workspace  libxal_2008.sln  libxal_2010.sln  libxal_2012.sln  libxal_WinRT.sln  libxal_WinRT.vcxproj  libxal_WinRT.vcxproj.filters  libxal_vs2013-winrt.sln  libxal_vs2013.sln
trunk/xalutil/: Doxyfile  Makefile.am  configure  configure.ac  fileproperties.rc  libxalutil.project  libxalutil.vcproj  libxalutil.vcxproj  libxalutil.vcxproj.filters  libxalutil_WinRT.vcxproj
trunk/xalutil/include/xal/: PlaylistManager.h
trunk/xalutil/include/xalutil/: MultiPlaylist.h  ParallelSoundManager.h  Playlist.h  xalUtilExport.h
trunk/xalutil/libxalutil.xcodeproj/: project.pbxproj
trunk/xalutil/msvc/vs2012/: libxalutil.vcxproj.filters
trunk/xalutil/msvc/vs2012/props/: default.props
trunk/xalutil/msvc/vs2013-winp8/: libxalutil.vcxproj
trunk/xalutil/msvc/vs2013-winrt/props/: configuration.props  default.props
trunk/xalutil/msvc/vs2013/props/: configuration.props
trunk/xalutil/props/: v110-winrt.default.props  v110.configuration.props
trunk/xalutil/src/: Makefile.am  Makefile.in  MultiPlaylist.cpp  ParallelSoundManager.cpp  Playlist.cpp
trunk/xalutil/xalutil-ios.xcodeproj/: project.pbxproj
trunk/xalutil/xalutil.xcodeproj/: project.pbxproj
trunk/xalutil/xcconfig/: iOS.xcconfig
xal.xcodeproj/: project.pbxproj
xalutil/: Doxyfile  Info.plist  Makefile.am  Makefile.in  configure.ac  fileproperties.rc  libxalutil.project  libxalutil.vcproj  libxalutil.vcxproj  libxalutil.vcxproj.filters  libxalutil_WinRT.vcxproj  xalutil.mkf
xalutil/android-studio/lib/: CMakeLists.txt  build.gradle
xalutil/android-studio/lib/src/main/: AndroidManifest.xml
xcconfig/: iOS.xcconfig
(+716 files in other folders)
