AM_CFLAGS=-I../include/xal
AM_CXXFLAGS=-I../include/xal
noinst_LTLIBRARIES = libxal_src.la
#libxal_src_la_configdir = $(libdir)/xal/include
#libxal_src_la_config_DATA = config.h
libxal_src_la_SOURCES =  \
AudioManager.cpp  Category.cpp  SimpleSound.cpp  SoundBuffer.cpp  Sound.cpp  Source.cpp  StreamSound.cpp



